--- a/Modeling/syllabus/Modelling_Data_Part1.Rmd
+++ b/Modeling/syllabus/Modelling_Data_Part1.Rmd
@@ -7,6 +7,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
 library(rmapzen)
 library(leaflet)
 library(hrbrthemes)
@@ -69,10 +70,10 @@ lab  <-  as.data.frame (list_census_vectors('CA16') %>%
 
 ```{r importFiles}
 montrealAirbnb <- read.csv(paste0('insideairbnb/', f[1]))
-torontonAirbnb <- read.csv(paste0('insideairbnb/', f[2]))
+torontoAirbnb <- read.csv(paste0('insideairbnb/', f[2]))
 vancouverAirbnb <- read.csv(paste0('insideairbnb/', f[3]))
 
-df <-  rbind(montrealAirbnb, torontonAirbnb, vancouverAirbnb)
+df <-  rbind(montrealAirbnb, torontoAirbnb, vancouverAirbnb)
 ```
 
 ```{r selectResidents}
@@ -716,7 +717,7 @@ city_tracts@data <- city_tracts@data %>%
 
 #summary(city_tracts@data)
 centroidsCity <-  gCentroid(city_tracts,byid=TRUE)
-plot(centroidsCity, add = T, pch = 16, cex = 0.6)
+#plot(centroidsCity, add = T, pch = 16, cex = 0.6)
 
 listMinoShares  <-  paste0(minorities, "_Share")
 
